gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/aa_init.d
version https://git-lfs.github.com/spec/v1
oid sha256:437613fb33ab78e8f001a110f7545d4daa3ba15a1ce8fcd3c4d0d1d4d2b14954
size 431
